turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:2: error: not found: value setCouleurSol
    setCouleurSol(Color.WHITE)
    ^LangtonsAnt:7: error: not found: value setCouleurSol
    setCouleurSol(Color.BLACK)
    ^