turmites.lessons.turmites.langton.Langton.scala.code
def step() {
  if (getCouleurSol() == Color.BLACK) {
    setCouleurSol(Color.WHITE)
    gauche()
    avance()
  }
  if (getCouleurSol() == Color.WHITE) {
    setCouleurSol(Color.BLACK)
    droite()
    avance()
  }
}